tests/src/frontend/typechecking/invalid/variance_extend_field_1.sk
class Boxy<T>(x: T)
class Foo<-Tbad>{x: Boxy<Tbad>}

fun main(): void {
  void
}
